Android statusbar的背景色 和Dialog的背景

--- a/善于器也/无损压缩图片工具.md
+++ b/善于器也/无损压缩图片工具.md
@@ -3,3 +3,8 @@
 [riot](http://luci.criosweb.ro/riot/ )
 
 [imageoptim](https://imageoptim.com/mac) 
+
+---
+设计师推荐的一个在线压缩图片工具，可批量压缩：
+
+-  [tinypng](https://tinypng.com/)
